# finfetch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.specify/memory/: constitution.md  work-pattern.md
docs/: README.md
specs/001-refactor-codebase-org/: ANALYSIS_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-refactor-codebase-org/checklists/: organization.md  requirements.md
src/: __init__.py  cli.py  cli_simple.py  finfetch.py  finfetch.yaml  pyproject.toml  rars.py  setup.py
src/analysis/: __init__.py  base.py  performance_analyzer.py  portfolio_analyzer.py  risk_analyzer.py
src/config/: __init__.py  config_manager.py  config_models.py
src/core/: __init__.py  data_models.py  finfetch.py
src/interfaces/: __init__.py  google_sheets.py  google_sheets_grokexternal.gs  google_sheets_grokexternal.js
src/processors/: __init__.py  base.py  data_aggregator.py  data_cleaner.py  financial_metrics.py  financial_metrics_calculator.py  stock_screening_processor.py  technical_indicators.py  tickers.py
src/sources/: __init__.py  alpha_vantage.py  base.py  fred.py  polygon.py  yahoo_finance.py  yahoo_simple.py
src/utils/: __init__.py  data_validation.py  date_utils.py  debug_config.py  logger.py  simple_logger.py
test/automated-tests/: __init__.py  test_core.py
test/dev/20251024Baseline/: 00-finfetch-baseline-test.bat  screening_results.csv  tech_analysis.csv
test/dev/20251024Baseline/ai-context/: ai-principles.md  work-pattern.md
test/dev/20251024Baseline/helper-scripts/: create_test_config.py  generate_cli_test_report.py  generate_test_report.py  run_polygon_test.py  test_cli_integration.py  validate_test_results.py
test/dev/20251024Baseline/notes/: CLI_REFACTORING_IMPLEMENTATION_SUMMARY.md  POLYGON_INTEGRATION_SUMMARY.md  PROJECT_SETUP_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SESSION_REFACTORING_NOTES.md  STOCK_SCREENING_REFACTORING_SUMMARY.md  UI_ARCHITECTURE_RECOMMENDATION.md
