[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finfetch"
version = "0.1.0"
description = "Financial Data Collection, Aggregation and Processing Utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinFetch Development Team", email = "dev@finfetch.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
    "fredapi>=0.5.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "structlog>=22.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "pydantic>=1.10.0",
    "marshmallow>=3.17.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
finfetch = "finfetch.cli:main"

[project.urls]
Homepage = "https://github.com/4jeffclark/finfetch"
Documentation = "https://finfetch.readthedocs.io"
Repository = "https://github.com/4jeffclark/finfetch"
Issues = "https://github.com/4jeffclark/finfetch/issues"

[tool.setuptools]
packages = ["finfetch", "finfetch.analysis", "finfetch.config", "finfetch.core", "finfetch.processors", "finfetch.sources", "finfetch.utils"]

[tool.setuptools.package-dir]
"finfetch" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/finfetch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "alpha_vantage.*",
    "fredapi.*",
    "structlog.*",
]
ignore_missing_imports = true
